create header for base.html

--- a/view/layout/base.html
+++ b/view/layout/base.html
@@ -1,9 +1,15 @@
 <html>
 	<head>
+		<style>
+			*{
+				margin: 0px;
+				padding: 0px;
+			}
+		</style>
 	</head>
 	<body>
-		<div id="mainHeader" style="background: #fff; border-bottom: #E9EDF4; height: 50px; display: block;">
-
+		<div id="mainHeader" style="background: #fff; border-bottom: 1px solid #E9EDF4; height: 50px; display: block;">
+			<input placeholder="Search..." style="border-radius: 4px; height: 25px; width: 20%; border: 1px solid #E9EDF4"></input>
 		</div>
 	</body>
 </html>
